# object-detection-system

./: .gitignore  .pre-commit-config.yaml  NOTIFICATIONS.md  README.md  config-event-driven-example.yaml  config-photo-digest.yaml  config-traffic-email-sample.yaml  config-v1-equivalent.yaml  config.yaml  pyproject.toml  requirements.txt  run.sh
configs/: config_20251223_1633.yaml  config_traffic_report_baseline.yaml  stress-test.yaml  traffic-annotated.yaml  traffic.yaml
docs/: DISTRIBUTED_ARCHITECTURE.md
examples/: config.yaml
scripts/: example_report.sh
src/object_detection/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  detector.py  dispatcher.py  notifier.py  planner.py
src/object_detection/config/: __init__.py  builder.py  geometry.py  planner.py  resolver.py  schemas.py  validator.py
src/object_detection/consumers/: __init__.py  digest_state.py  email_digest.py  email_notifier.py  email_service.py  frame_capture.py  frame_service.py
src/object_detection/core/: __init__.py  camera.py  detector.py  dispatcher.py  frame_saver.py  models.py  nighttime.py  nighttime_zone.py
src/object_detection/edge/: ISOLATION.txt  __init__.py  config.py  detector.py  nighttime_zone.py
src/object_detection/emitters/: __init__.py  detected.py  line_cross.py  nighttime_car.py  registry.py  tracking_state.py  zone_base.py  zone_enter.py  (+1 more)
tests/: __init__.py  test_config.py  test_detector_logic.py  test_digest_state.py  test_models.py
v1/: .gitignore  README.md  analyze_events.py  config.yaml  config_validator.py  detect_objects.py  run_system.py
(+38 files in other folders)
